--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@prisma/client": "4.1.1",
+    "autoprefixer": "^10.4.8",
     "next": "12.2.3",
+    "postcss": "^8.4.14",
+    "prisma": "^4.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
