--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
