--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "4.1.1",
     "autoprefixer": "^10.4.8",
+    "draft-js": "^0.11.7",
+    "immutable": "^4.1.0",
     "next": "12.2.3",
     "postcss": "^8.4.14",
     "prisma": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3.1.8"
   },
@@ -24,6 +28,7 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
