--- a/package.json
+++ b/package.json
@@ -12,18 +12,30 @@
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "4.1.1",
     "autoprefixer": "^10.4.8",
+    "bcryptjs": "^2.4.3",
+    "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.4",
+    "express-validator": "^6.14.2",
+    "formidable": "^2.0.1",
+    "iron-session": "^6.1.3",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
     "postcss": "^8.4.14",
     "prisma": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/formidable": "^2.0.5",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
