--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formidable": "^2.0.1",
     "immutable": "^4.1.0",
     "iron-session": "^6.1.3",
+    "jalaliday": "^2.3.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
     "postcss": "^8.4.14",
