--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.0",
     "@prisma/client": "4.3.0",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.4",
